--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 #in productie  ddl-auto nu se pune pe update, se pune pe none
 #loggin.level.org.springframework=DEBUG
+#spring.main.banner-mode=off
+spring.output.ansi.enabled=ALWAYS
