--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=tres_commas03
+spring.datasource.username=user
+spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://localhost:3306/final_space?serverTimezone=UTC
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
-#in productie  ddl-auto nu se pune pe update, se pune pe none
-#loggin.level.org.springframework=DEBUG
 spring.main.banner-mode=off
 spring.output.ansi.enabled=ALWAYS
